--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,25 +5,25 @@ authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-config = "0.14.0"
+config = "0.15.4"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.133"
 serde_derive = "1.0.152"
 # Wait for wither to relase a new version.
 # https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
 wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
-futures = "0.3.30"
-thiserror = "1.0.63"
+futures = { version = "0.3.30" }
+thiserror = "2.0.9"
 axum = { version = "0.7.5" }
 tokio = { version = "1.39.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 tower-http = { version = "0.6", features = [
-  "trace",
-  "compression-br",
-  "propagate-header",
-  "sensitive-headers",
-  "cors",
+    "trace",
+    "compression-br",
+    "propagate-header",
+    "sensitive-headers",
+    "cors",
 ] }
 chrono = "0.4.38"
 async-trait = "0.1.81"
@@ -31,8 +31,8 @@ async-trait = "0.1.81"
 bson = { version = "2.10.0", features = ["serde_with", "chrono-0_4"] }
 jsonwebtoken = "9.3.0"
 once_cell = "1.20.0"
-bcrypt = "0.15.1"
-validator = { version = "0.18.1", features = ["derive"] }
+bcrypt = "0.16.0"
+validator = { version = "0.19.0", features = ["derive"] }
 mime = "0.3.17"
 bytes = "1.7.2"
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
