--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ serde_derive = "1.0.152"
 wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
 futures = { version = "0.3.31" }
 thiserror = "2.0.18"
-axum = { version = "0.7.9" }
+axum = { version = "0.8.8" }
 tokio = { version = "1.49.0", features = ["full"] }
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
@@ -29,13 +29,13 @@ chrono = "0.4.43"
 async-trait = "0.1.89"
 # Investigate if wither::bson can be used instead and activate this feature.
 bson = { version = "2.15.0", features = ["serde_with", "chrono-0_4"] }
-jsonwebtoken = "9.3.1"
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 once_cell = "1.21.3"
 bcrypt = "0.18.0"
 validator = { version = "0.20.0", features = ["derive"] }
 mime = "0.3.17"
 bytes = "1.11.0"
-axum-extra = { version = "0.9.6", features = ["typed-header"] }
+axum-extra = { version = "0.12.5", features = ["typed-header"] }
 
 [dev-dependencies]
 assert-json-diff = "2.0.2"
