--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 config = "0.15.19"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-serde_derive = "1.0.152"
 # Wait for wither to relase a new version.
 # https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
 wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
@@ -29,6 +28,7 @@ chrono = "0.4.43"
 async-trait = "0.1.89"
 # Investigate if wither::bson can be used instead and activate this feature.
 bson = { version = "2.15.0", features = ["serde_with", "chrono-0_4"] }
+mongodb = "3.1.0"
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 once_cell = "1.21.3"
 bcrypt = "0.18.0"
