--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ chrono = "0.4.43"
 async-trait = "0.1.89"
 # Investigate if wither::bson can be used instead and activate this feature.
 bson = { version = "2.15.0", features = ["serde_with", "chrono-0_4"] }
-mongodb = "3.5.1"
+mongodb = { version = "3.5.1", features = ["compat-3-0-0"] }
 jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
 once_cell = "1.21.3"
 bcrypt = "0.18.0"
